--- a/src/app/pages/loteria-nacional/prediccion/loterianacional-prediccion.component.html
+++ b/src/app/pages/loteria-nacional/prediccion/loterianacional-prediccion.component.html
@@ -99,13 +99,13 @@
               <span class="prediction-type">Optimizada</span>
             </div>
             <div class="prediction-numbers">
-              <div class="lottery-balls-container">
-                <div *ngFor="let number of prediction.numeros || []" class="ball-wrapper">
-                  <app-euromillones-ball [number]="number" [size]="60" [staticRendering]="true" [customColor]="'#0066CC'"></app-euromillones-ball>
+              <div class="lottery-numbers-container">
+                <div *ngFor="let number of prediction.numeros || []" class="lottery-number">
+                  <span class="number-display">{{ number }}</span>
                 </div>
-                <span class="lottery-balls-separator">+</span>
-                <div *ngIf="prediction.reintegro" class="ball-wrapper">
-                  <app-euromillones-ball [number]="prediction.reintegro" [type]="'star'" [size]="60" [staticRendering]="true" [customColor]="'#FF9800'"></app-euromillones-ball>
+                <div *ngIf="prediction.reintegro !== null && prediction.reintegro !== undefined" class="reintegro-container">
+                  <span class="reintegro-label">Reintegro:</span>
+                  <span class="reintegro-number">{{ prediction.reintegro }}</span>
                 </div>
               </div>
             </div>
