Fix: Actualizar texto de algoritmos con 7 IAs y cambiar color a blanco

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -66,7 +66,7 @@
       <div class="text-center">
         <h2 class="section-title">Nuestros Algoritmos</h2>
         <div class="section-content">
-          <p class="lead">Los algoritmos de LOTO IA.COM aprovechan patrones y estadísticas de los datos históricos de los 10 sorteos de loterías españolas. Nuestras dos IAs, "Da Vinci" y "Fortunata", forman el equipo de inteligencia artificial de LOTO IA.COM.</p>
+          <p class="lead text-white">Los algoritmos de LOTO IA aprovechan patrones y estadísticas de los datos históricos de los 7 sorteos de loterías españolas. Nuestras 7 IAs, "Da Vinci", "Prognosis", "Ástrid", "Sináptica", "Nóvax", "Axioma" y "Fortunata", forman el equipo de inteligencia artificial de LOTO IA.</p>
         </div>
       </div>
     </section>
