feat: limpieza de archivos antiguos y reorganización del repositorio

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -367,7 +367,7 @@
         </div>
         <h3>La Primitiva</h3>
         <p>Predicciones generadas por nuestra IA "Prognosis"</p>
-        <button class="game-btn" routerLink="/primitiva">Generar predicción</button>
+        <button class="game-btn" routerLink="/primitiva/prediccion">Generar predicción</button>
       </div>
 
       <div class="game-card">
@@ -376,7 +376,7 @@
         </div>
         <h3>Bonoloto</h3>
         <p>Predicciones generadas por nuestra IA "Ástrid"</p>
-        <button class="game-btn" routerLink="/bonoloto">Generar predicción</button>
+        <button class="game-btn" routerLink="/bonoloto/prediccion">Generar predicción</button>
       </div>
 
       <div class="game-card">
@@ -385,7 +385,7 @@
         </div>
         <h3>El Gordo</h3>
         <p>Predicciones generadas por nuestra IA "Sináptica"</p>
-        <button class="game-btn" routerLink="/gordo-primitiva">Generar predicción</button>
+        <button class="game-btn" routerLink="/elgordo/prediccion">Generar predicción</button>
       </div>
 
       <div class="game-card">
@@ -394,7 +394,7 @@
         </div>
         <h3>EuroDreams</h3>
         <p>Predicciones generadas por nuestra IA "Nóvax"</p>
-        <button class="game-btn" routerLink="/eurodreams">Generar predicción</button>
+        <button class="game-btn" routerLink="/eurodreams/prediccion">Generar predicción</button>
       </div>
 
       <div class="game-card">
@@ -403,7 +403,7 @@
         </div>
         <h3>Lototurf</h3>
         <p>Predicciones generadas por nuestra IA "Axioma"</p>
-        <button class="game-btn" routerLink="/lototurf">Generar predicción</button>
+        <button class="game-btn" routerLink="/lototurf/prediccion">Generar predicción</button>
       </div>
 
       <div class="game-card">
@@ -412,7 +412,7 @@
         </div>
         <h3>Lotería Nacional</h3>
         <p>Predicciones generadas por nuestra IA "Fortunata"</p>
-        <button class="game-btn" routerLink="/loteria-nacional">Generar predicción</button>
+        <button class="game-btn" routerLink="/loterianacional/prediccion">Generar predicción</button>
       </div>
     </div>
   </section>
